--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "Lemesdaniel/Grafika",
     "require": {
-        "kosinix/grafika": "^1.4"
+        "kosinix/grafika": "^1.4",
+	"illuminate/support": "5.0.*|5.1.*|5.2.*"
     },
     "license": "MIT",
     "authors": [
@@ -10,5 +11,9 @@
             "email": "dlemes@gmail.com"
         }
     ],
-    "minimum-stability": "dev"
+    "autoload" : {
+        "psr-4" : {
+            "Lemesdaniel\\Grafika\\": "src/"
+        }
+    }
 }
