change name package

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Lemesdaniel/Grafika",
+    "name": "lemesdaniel/grafika-laravel",
     "require": {
         "kosinix/grafika": "^1.4",
 	"illuminate/support": "5.0.*|5.1.*|5.2.*"
