--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "lemesdaniel/grafika-laravel",
     "require": {
         "kosinix/grafika": "^1.4",
-	"illuminate/support": "5.*"
+	"illuminate/support": "5.4.*|5.5.*|5.6.*|5.7.*"
     },
     "license": "MIT",
     "authors": [
